<resources>
    <string name="app_name">HomeWork5_1</string>
    <string name="attractions">Attractions</string>
    <string name="dining">Dining</string>
    <string name="education">Education</string>
    <string name="family">Family</string>
    <string name="health">Health</string>
    <string name="office">Office</string>
    <string name="promotions">Promotions</string>
    <string name="radio">Radio</string>
    <string name="recipes">Recipes</string>
    <string name="sports">Sports</string>
    <string name="poi">POI</string>
    <string name="photo">PHOTO</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="weight">Weight</string>
    <string name="inventory">Inventory</string>
    <string name="sing">Sing in</string>
    <string name="sign">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember">Remember</string>
    <string name="forgot">Forgot password?</string>
    <string name="just">* Just sign in</string>
    <string name="android">Android</string>
    <string name="username">Username</string>
    <string name="address_description">Address Description</string>
    <string name="posts">125 \nPosts</string>
    <string name="followers">20K \nFollowers</string>
    <string name="following">22 \nFollowing</string>
    <string name="directions">DIRECTIONS</string>
    <string name="call">CALL</string>
    <string name="save">SAVE</string>
    <string name="website">WEBSITE</string>
    <string name="certificated">Certificated</string>
    <string name="layouts">Layouts</string>
    <string name="views">Views</string>
    <string name="tablelayout_1">Разметка TableLayout 1</string>
    <string name="linearlayout_1">Разметка LinearLayout 1</string>
    <string name="linearlayout_2">Разметка LinearLayout 2</string>
    <string name="constraintlayout_2">Разметка ConstraintLayout 2</string>
    <string name="relativelayout_2">Разметка RelativeLayout 2</string>
    <string name="linearlayout_3">Разметка LinearLayout 3</string>
    <string name="constraintlayout_3">Разметка ConstraintLayout 3</string>
    <string name="relativelayout_3">Разметка RelativeLayout 3</string>
    <string name="linearlayout_4">Разметка LinearLayout 4</string>
    <string name="constraintlayout_4">Разметка ConstraintLayout 4</string>
    <string name="relativelayout_4">Разметка RelativeLayout 4</string>
    <string name="constraintlayout_5">Разметка ConstraintLayout 5</string>
</resources>