<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LayoutStyle1">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">
        <TextView
            style="@style/PHOTO_Style"/>
        <ImageView
            style="@style/ImagePhotoStyle"
            android:src="@drawable/photo"/>
    </FrameLayout>

    <EditText
        style="@style/EditTextStyle1"
        android:hint="@string/title"/>

    <LinearLayout
        style="@style/LinearLayoutStyle2"
        android:layout_marginTop="40dp">

        <EditText
            style="@style/EditTextStyle2"
            android:hint="@string/price"/>

        <EditText
            style="@style/EditTextStyle3"
            android:hint="@string/location"
            android:drawableEnd="@drawable/location"/>
    </LinearLayout>

    <EditText
        style="@style/EditTextStyle1"
        android:hint="@string/description"/>

    <LinearLayout
        style="@style/LinearLayoutStyle1"
        android:layout_marginTop="30dp">

        <EditText
            style="@style/EditTextStyle5"
            android:hint="@string/inventory"/>

        <EditText
            style="@style/EditTextStyle6"
            android:hint="@string/weight"/>
    </LinearLayout>
</LinearLayout>