<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableRow>
        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            style="@style/POI_Style"/>
    </TableRow>
    <TableRow>
        <ImageView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:src="@drawable/attractions"
            android:layout_marginTop="15dp"/>
        <TextView
            style="@style/TextViewStyle1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/attractions"
            android:layout_marginTop="15dp"/>
    </TableRow>
    <TableRow>
        <ImageView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:src="@drawable/dining"/>
        <TextView
            style="@style/TextViewStyle1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/dining"/>
    </TableRow>
    <TableRow>
        <ImageView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:src="@drawable/education"/>
        <TextView
            style="@style/TextViewStyle1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/education"/>
    </TableRow>
    <TableRow>
        <ImageView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:src="@drawable/family"/>
        <TextView
            style="@style/TextViewStyle1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/family"/>
    </TableRow>
    <TableRow>
        <ImageView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:src="@drawable/health"/>
        <TextView
            style="@style/TextViewStyle1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/health"/>
    </TableRow>
    <TableRow>
        <ImageView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:src="@drawable/office"/>
        <TextView
            style="@style/TextViewStyle1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/office"/>
    </TableRow>
    <TableRow>
        <ImageView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:src="@drawable/promotions"/>
        <TextView
            style="@style/TextViewStyle1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/promotions"/>
    </TableRow>
    <TableRow>
        <ImageView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:src="@drawable/radio"/>
        <TextView
            style="@style/TextViewStyle1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/radio"/>
    </TableRow>
    <TableRow>
        <ImageView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:src="@drawable/recipes"/>
        <TextView
            style="@style/TextViewStyle1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/recipes"/>
    </TableRow>
    <TableRow>
        <ImageView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:src="@drawable/sports"/>
        <TextView
            style="@style/TextViewStyle1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/sports"/>
    </TableRow>
</TableLayout>