<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        style="@style/PHOTO_Style"
        android:id="@+id/photo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        style="@style/ImagePhotoStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/photo"
        app:layout_constraintRight_toRightOf="@id/photo"
        app:layout_constraintBottom_toBottomOf="@id/photo"/>

    <EditText
        style="@style/EditTextStyle1"
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        app:layout_constraintTop_toBottomOf="@id/photo"/>

    <EditText
        style="@style/EditTextStyle2"
        android:id="@+id/price"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"/>

    <EditText
        style="@style/EditTextStyle3"
        android:id="@+id/location"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:hint="@string/location"
        android:layout_marginTop="40dp"
        android:drawableEnd="@drawable/location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/price"
        app:layout_constraintTop_toBottomOf="@id/title"/>

    <EditText
        style="@style/EditTextStyle4"
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        app:layout_constraintTop_toBottomOf="@id/price"/>

    <EditText
        style="@style/EditTextStyle5"
        android:id="@+id/inventory"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:hint="@string/inventory"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description"/>

    <EditText
        style="@style/EditTextStyle6"
        android:id="@+id/weight"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:hint="@string/weight"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toEndOf="@id/inventory"
        app:layout_constraintTop_toBottomOf="@id/description"/>
</androidx.constraintlayout.widget.ConstraintLayout>