<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/LayoutStyle2">

    <TextView
        style="@style/TextViewStyle6"
        android:id="@+id/android"
        android:text="@string/android"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        style="@style/ImageViewStyle3"
        android:id="@+id/image1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/android"
        android:layout_marginStart="30dp"/>

    <TextView
        style="@style/TextViewStyle7"
        android:id="@+id/posts"
        android:text="@string/posts"
        app:layout_constraintStart_toEndOf="@id/image1"
        app:layout_constraintTop_toBottomOf="@id/android"/>

    <TextView
        style="@style/TextViewStyle7"
        android:id="@+id/followers"
        android:text="@string/followers"
        app:layout_constraintStart_toEndOf="@id/posts"
        app:layout_constraintTop_toBottomOf="@id/android"/>

    <TextView
        style="@style/TextViewStyle7"
        android:id="@+id/following"
        android:text="@string/following"
        app:layout_constraintStart_toEndOf="@id/followers"
        app:layout_constraintTop_toBottomOf="@id/android"/>

    <TextView
        style="@style/TextViewStyle8"
        android:id="@+id/username"
        android:text="@string/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image1"/>

    <TextView
        style="@style/TextViewStyle9"
        android:id="@+id/address"
        android:text="@string/address_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username"/>

    <ImageView
        style="@style/ImageViewStyle4"
        android:id="@+id/image2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/address"
        android:layout_marginStart="30dp"/>

    <ImageView
        style="@style/ImageViewStyle4"
        android:id="@+id/image3"
        app:layout_constraintStart_toEndOf="@id/image2"
        app:layout_constraintTop_toBottomOf="@id/address"
        android:layout_marginStart="12dp"/>

    <ImageView
        style="@style/ImageViewStyle4"
        android:id="@+id/image4"
        app:layout_constraintStart_toEndOf="@id/image3"
        app:layout_constraintTop_toBottomOf="@id/address"
        android:layout_marginStart="12dp"/>

    <ImageView
        style="@style/ImageViewStyle4"
        android:id="@+id/image5"
        app:layout_constraintStart_toEndOf="@id/image4"
        app:layout_constraintTop_toBottomOf="@id/address"
        android:layout_marginStart="12dp"/>

    <ImageView
        style="@style/ImageViewStyle4"
        android:id="@+id/image6"
        app:layout_constraintStart_toEndOf="@id/image5"
        app:layout_constraintTop_toBottomOf="@id/address"
        android:layout_marginStart="12dp"/>

    <ImageView
        style="@style/ImageViewStyle4"
        android:id="@+id/image7"
        app:layout_constraintStart_toEndOf="@id/image6"
        app:layout_constraintTop_toBottomOf="@id/address"
        android:layout_marginStart="12dp"/>

    <ImageView
        style="@style/ImageViewStyle5"
        android:id="@+id/image8"
        android:src="@drawable/directions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image2"
        android:layout_marginStart="60dp"/>

    <ImageView
        style="@style/ImageViewStyle5"
        android:id="@+id/image9"
        android:src="@drawable/call"
        app:layout_constraintStart_toEndOf="@id/image8"
        app:layout_constraintTop_toBottomOf="@id/image2"
        android:layout_marginStart="45dp"/>

    <ImageView
        style="@style/ImageViewStyle5"
        android:id="@+id/image10"
        android:src="@drawable/save"
        app:layout_constraintStart_toEndOf="@id/image9"
        app:layout_constraintTop_toBottomOf="@id/image2"
        android:layout_marginStart="20dp"/>

    <ImageView
        style="@style/ImageViewStyle5"
        android:id="@+id/image11"
        android:src="@drawable/website"
        app:layout_constraintStart_toEndOf="@id/image10"
        app:layout_constraintTop_toBottomOf="@id/image2"
        android:layout_marginStart="32dp"/>

    <TextView
        style="@style/TextViewStyle10"
        android:id="@+id/directions"
        android:text="@string/directions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image8"
        android:paddingStart="30dp"/>

    <TextView
        style="@style/TextViewStyle10"
        android:id="@+id/call"
        android:text="@string/call"
        app:layout_constraintStart_toEndOf="@id/directions"
        app:layout_constraintTop_toBottomOf="@id/image8"
        android:paddingStart="14dp"/>

    <TextView
        style="@style/TextViewStyle10"
        android:id="@+id/save"
        android:text="@string/save"
        app:layout_constraintStart_toEndOf="@id/call"
        app:layout_constraintTop_toBottomOf="@id/image8"
        android:paddingStart="14dp"/>

    <TextView
        style="@style/TextViewStyle10"
        android:id="@+id/website"
        android:text="@string/website"
        app:layout_constraintStart_toEndOf="@id/save"
        app:layout_constraintTop_toBottomOf="@id/image8"
        android:paddingStart="14dp"/>

    <View
        style="@style/LineStyle"
        android:id="@+id/line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/directions"/>

    <ImageView
        style="@style/ImageViewStyle3"
        android:id="@+id/image12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line"
        android:layout_marginTop="25dp"
        android:layout_marginStart="30dp"/>

    <ImageView
        style="@style/ImageViewStyle3"
        android:id="@+id/image13"
        app:layout_constraintStart_toEndOf="@id/image12"
        app:layout_constraintTop_toBottomOf="@id/line"
        android:layout_marginTop="25dp"
        android:layout_marginStart="15dp"/>

    <ImageView
        style="@style/ImageViewStyle3"
        android:id="@+id/image14"
        app:layout_constraintStart_toEndOf="@id/image13"
        app:layout_constraintTop_toBottomOf="@id/line"
        android:layout_marginTop="25dp"
        android:layout_marginStart="15dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>